cmake_minimum_required (VERSION 2.8)
project (hes)
set (CMAKE_AUTOMOC ON)
set (CMAKE_AUTORCC ON)
set (CMAKE_INCLUDE_CURRENT_DIR ON)
set (CMAKE_BUILD_TYPE RELEASE)

include (../cmake/base_config.cmake)
INCLUDE (${APHID_DIR}/cmake/boost_config.cmake)
INCLUDE (${APHID_DIR}/cmake/hdf5_config.cmake)
INCLUDE (${APHID_DIR}/cmake/ogl_config.cmake)
INCLUDE (${APHID_DIR}/cmake/qt_config.cmake)
INCLUDE (${APHID_DIR}/cmake/aphid_config.cmake)
INCLUDE (${APHID_DIR}/cmake/clapack_config.cmake)
INCLUDE (${APHID_DIR}/cmake/zip_config.cmake)
include_directories (${APHID_DIR}/hesperis)

add_subdirectory(viewer)
