cmake_minimum_required (VERSION 2.8)
project (sgtest)

include_directories("../Shotgun")
include_directories("../")
include_directories ("D:/usr/xmlrpc-c-1.25.26/include")
include_directories("D:/usr/boost_1_51_0")
add_executable(sgtest main.cpp)

set(Boost_INCLUDE_DIR "D:/usr/boost_1_51_0")
set(Boost_LIBRARY_DIR "D:/usr/boost_1_51_0/stage/lib")
set(Boost_USE_STATIC_LIBS        ON)
set(Boost_USE_MULTITHREADED      ON)

find_package(Boost 1.51 COMPONENTS system date_time regex)
message ("ada" ${Boost_SYSTEM_LIBRARY})
message ("ada" ${Boost_DATE_TIME_LIBRARY})
target_link_libraries (sgtest ${Boost_SYSTEM_LIBRARY})
target_link_libraries (sgtest ${Boost_DATE_TIME_LIBRARY})
target_link_libraries (sgtest ${Boost_REGEX_LIBRARY})
SET(CMAKE_CXX_LINK_FLAGS "${CMAKE_CXX_LINK_FLAGS} /NODEFAULTLIB:LIBCMT.lib")
target_link_libraries (sgtest "../Shotgun/shotgunAPI")
target_link_libraries (sgtest "D:/usr/xmlrpc-c-1.25.26/lib/xmlrpc.lib")
target_link_libraries (sgtest "D:/usr/xmlrpc-c-1.25.26/lib/xmlrpccpp.lib")
target_link_libraries (sgtest "D:/usr/xmlrpc-c-1.25.26/lib/abyss.lib")
target_link_libraries (sgtest "D:/usr/xmlrpc-c-1.25.26/lib/xmlhttpsys.lib")
target_link_libraries (sgtest "D:/usr/xmlrpc-c-1.25.26/lib/xmlparse.lib")
target_link_libraries (sgtest "D:/usr/xmlrpc-c-1.25.26/lib/xmltok.lib")
target_link_libraries (sgtest "wsock32.lib")
target_link_libraries (sgtest "wininet.lib")
